Start to restructure the foundation section annd create individual guides to store docs/tool build instructions. Also commit binaries for the foundation section so people can get started without the tools if that's what they want to do for some reason

--- a/00-foundation/Makefile
+++ b/00-foundation/Makefile
@@ -1,27 +1,27 @@
 RISCV_PREFIX ?=
 
 .PHONY: all
-all: clean BUILD/nothing.bin BUILD/nothing.elf BUILD/nothing.dump
+all: clean nothing.bin nothing.elf nothing.dump
 
 .PHONY: clean
 clean:
-	rm -rf BUILD
+	rm -rf BUILD nothing.elf nothing.bin nothing.dump
 
 BUILD/start.o: start.s
 	@mkdir -p BUILD
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-as -march=rv32imac $< -o $@
+	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-as -march=rv32ima $< -o $@
 
 BUILD/nothing.o: nothing.c
 	@mkdir -p BUILD
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-gcc -fPIC -O2 -g0 -static -fvisibility=hidden -nostdlib -nostartfiles -march=rv32imac -mabi=ilp32 $< -o $@
+	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-gcc -fPIC -O2 -g0 -static -fvisibility=hidden -nostdlib -nostartfiles -march=rv32ima -mabi=ilp32 $< -o $@
 
-BUILD/nothing.elf: BUILD/nothing.o BUILD/start.o
+nothing.elf: BUILD/nothing.o BUILD/start.o
 	@mkdir -p BUILD
 	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-ld $^ -Tlinker.ld -o $@
 
-BUILD/nothing.bin: BUILD/nothing.elf
+nothing.bin: nothing.elf
 	@mkdir -p BUILD
 	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-objcopy $< -O binary $@
 
-BUILD/nothing.dump: BUILD/nothing.elf
+nothing.dump: nothing.elf
 	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-objdump -d $< > $@
