Make a smaller version of the elfheader

--- a/04-creating-elf-files/Makefile
+++ b/04-creating-elf-files/Makefile
@@ -1,4 +1,9 @@
 SHELL := /usr/bin/env bash
 
-elfheader.elf: elfheader.hex
+SOURCES := $(wildcard *.hex)
+TARGETS := $(patsubst %.hex,%.elf,$(SOURCES))
+
+all: $(TARGETS)
+
+%.elf: %.hex
 	sed "s/#.*$$//g" $< | xxd -r -p > $@
