Switch to using only RV32I and justify this in the readme. Change RISCV_PREFIX to improve portability on other systems

--- a/00-foundation/Makefile
+++ b/00-foundation/Makefile
@@ -1,5 +1,5 @@
 SHELL = /bin/bash
-RISCV_PREFIX ?=
+RISCV_PREFIX ?= riscv32-unknown-elf-
 
 .PHONY: all
 all: clean nothing.bin nothing.elf nothing.dump
@@ -10,19 +10,19 @@ clean:
 
 BUILD/start.o: start.s
 	@mkdir -p BUILD
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-as -march=rv32ima $< -o $@
+	$(RISCV_PREFIX)as -march=rv32i $< -o $@
 
 BUILD/nothing.o: nothing.c
 	@mkdir -p BUILD
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-gcc -fPIC -O2 -g0 -static -fvisibility=hidden -nostdlib -nostartfiles -march=rv32ima -mabi=ilp32 $< -o $@
+	$(RISCV_PREFIX)gcc -fPIC -O2 -g0 -static -fvisibility=hidden -nostdlib -nostartfiles -march=rv32i -mabi=ilp32 $< -o $@
 
 nothing.elf: BUILD/nothing.o BUILD/start.o
 	@mkdir -p BUILD
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-ld $^ -Tlinker.ld -o $@
+	$(RISCV_PREFIX)ld $^ -Tlinker.ld -o $@
 
 nothing.bin: nothing.elf
 	@mkdir -p BUILD
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-objcopy $< -O binary $@
+	$(RISCV_PREFIX)objcopy $< -O binary $@
 
 nothing.dump: nothing.elf
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-objdump -d $< > $@
+	$(RISCV_PREFIX)objdump -d $< > $@
