--- a/05-uart/Makefile
+++ b/05-uart/Makefile
@@ -1,7 +1,9 @@
+RISCV_PREFIX ?= riscv32-unknown-elf-
+
 BUILD/uart.bin: uart.hex
 	@mkdir -p BUILD
 	xxd -r -p uart.hex > $@
 
 .PHONY: dump
 dump: BUILD/uart.bin
-	$(RISCV_PREFIX)/bin/riscv32-unknown-elf-objdump -D -b binary -EL -m riscv:rv32 $<
+	$(RISCV_PREFIX)objdump -D -b binary -EL -m riscv:rv32 $<
