--- a/substratum/Makefile
+++ b/substratum/Makefile
@@ -5,9 +5,10 @@ VERSION := $(shell cat VERSION.txt)
 
 GO = go
 GOLIST := $(shell $(GO) list ./... | grep -v vendor)
+GOLANGCILINT = golangci-lint
 
 .PHONY: ci
-ci: clean test vet fmt lint staticcheck verify-vendor bin/$(NAME)
+ci: clean test vet fmt lint staticcheck golangci-lint verify-vendor bin/$(NAME)
 
 .PHONY: clean
 clean:
@@ -40,6 +41,10 @@ lint:
 	@echo "+ $@"
 	@if [[ ! -z '$(shell golint ./... | grep -v vendor | tee /dev/stderr)' ]]; then exit 1; fi
 
+.PHONY: golangci-lint
+golangci-lint:
+	@echo "+ $@"
+	@if [[ ! -z '$(shell $(GOLANGCILINT) run | tee /dev/stderr)' ]]; then exit 1; fi
 
 .PHONY: verify-vendor
 verify-vendor:
@@ -51,3 +56,14 @@ build: bin/$(NAME)
 bin/$(NAME): $(wildcard *.go) $(wildcard cmd/$(NAME)/*.go)
 	mkdir -p bin
 	$(GO) build -mod=vendor -o $@ cmd/$(NAME)/main.go
+
+.PHONY: docker-build-env
+docker-build-env: VERSION.txt Dockerfile
+	@if [[ -z '$(shell docker image ls --quiet substratum-build:$(VERSION))' ]]; then \
+		docker build -t substratum-build:$(VERSION) . ;\
+	fi
+
+.PHONY: docker-ci
+docker-ci: docker-build-env
+	mkdir -p bin BUILD
+	docker run --rm -v "$$PWD:/work" substratum-build:$(VERSION) make ci
