link correctly when using a 64 bit riscv compiler

--- a/03-understanding-kernel-formats/Makefile
+++ b/03-understanding-kernel-formats/Makefile
@@ -14,7 +14,7 @@ BUILD/start.o: start.s
 
 ret1234.elf: BUILD/start.o
 	@mkdir -p BUILD
-	$(RISCV_PREFIX)ld $^ -Tlinker.ld -o $@
+	$(RISCV_PREFIX)ld $^ -Tlinker.ld --architecture=rv32i -m elf32lriscv -o $@
 
 ret1234.bin: ret1234.elf
 	@mkdir -p BUILD
