add skeleton separated autotestcmd

--- a/substratum/Makefile
+++ b/substratum/Makefile
@@ -1,7 +1,9 @@
 SHELL := /bin/bash
 
 NAME=substratum
+
 SS_ASM_NAME=ss-asm
+SS_AUTOTEST_NAME=ss-autotest
 
 VERSION := $(shell cat VERSION.txt)
 
@@ -43,16 +45,19 @@ verify-vendor:
 	@$(GO) mod verify > /dev/null
 
 .PHONY: build
-build: bin/$(NAME) bin/$(SS_ASM_NAME)
+build: bin/$(NAME) bin/$(SS_ASM_NAME) bin/$(SS_AUTOTEST_NAME)
 
 bin:
 	@mkdir -p bin
 
-bin/$(NAME): $(wildcard *.go) $(wildcard cmd/$(NAME)/*.go) $(wildcard cmd/ss-asm/*.go) $(wildcard autotest/*.go) $(wildcard autotest/uart_rxxd/*.go) | bin
+bin/$(NAME): $(wildcard *.go) $(wildcard cmd/$(NAME)/*.go) $(wildcard cmd/$(SS_ASM_NAME)/*.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/*.go) $(wildcard autotest/*.go) | bin
 	$(GO) build -mod=vendor -o $@ cmd/$(NAME)/*.go
 
 bin/$(SS_ASM_NAME): $(wildcard *.go) $(wildcard cmd/$(SS_ASM_NAME)/*.go) $(wildcard cmd/$(SS_ASM_NAME)/main/*.go) | bin
 	$(GO) build -mod=vendor -o $@ cmd/$(SS_ASM_NAME)/main/*.go
+
+bin/$(SS_AUTOTEST_NAME): $(wildcard *.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/*.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/main/*.go) | bin
+	$(GO) build -mod=vendor -o $@ cmd/$(SS_AUTOTEST_NAME)/main/*.go
 
 .PHONY: docker-build-env
 docker-build-env: VERSION.txt Dockerfile
