add gdbinit and qemu commands for 05 / 06

--- a/06-uart-rxxd/Makefile
+++ b/06-uart-rxxd/Makefile
@@ -15,6 +15,10 @@ BUILD/uart-rxxd.bin: uart-rxxd.hex
 dump: BUILD/uart-rxxd.bin
 	$(RISCV_PREFIX)objdump -D -b binary -EL -m riscv:rv32 $<
 
+.PHONY: qemu
+qemu:
+	qemu-system-riscv64 -nographic -serial pty -gdb tcp::1234 -S -machine sifive_e -kernel BUILD/uart-rxxd.elf
+
 BUILD/uart-rxxd.elf: elfheader.hex uart-rxxd.hex
 	@mkdir -p BUILD
 	cat $^ | sed "s/#.*$$//g" | xxd -r -p > $@
