various makefile improvements

--- a/substratum/Makefile
+++ b/substratum/Makefile
@@ -1,27 +1,32 @@
-SHELL := /bin/bash
+MAKEFLAGS += --warn-undefined-variables --no-builtin-rules
+SHELL := /usr/bin/env bash
+.SHELLFLAGS := -uo pipefail -c
+.DEFAULT_GOAL := ci
+.DELETE_ON_ERROR:
+.SUFFIXES:
 
-NAME=substratum
+BINDIR := _bin
 
-SS_ASM_NAME=ss-asm
-SS_AUTOTEST_NAME=ss-autotest
+NAME := substratum
+SS_ASM_NAME := ss-asm
+SS_AUTOTEST_NAME := ss-autotest
 
 VERSION := $(shell cat VERSION.txt)
 
-GO = go
+GOLANGCILINT_VERSION := v1.55.2
+
+GO := go
 GOLIST := $(shell $(GO) list -mod=vendor ./... | grep -v vendor)
-GOLINT = golint
 
 .PHONY: ci
-ci: clean test fmt lint golangci-lint verify-vendor build
+ci: test fmt golangci-lint verify-vendor build
 
 .PHONY: clean
 clean:
-	@echo "+ $@"
-	@rm -rf bin
+	@rm -rf $(BINDIR)
 
 .PHONY: test
 test:
-	@echo "+ $@"
 	@$(GO) test -mod=vendor $(GOLIST)
 
 .PHONY: fmt
@@ -29,34 +34,24 @@ fmt:
 	@echo "+ $@"
 	@if [[ ! -z "$(shell gofmt -l -s . | grep -v vendor | tee /dev/stderr)" ]]; then exit 1; fi
 
-.PHONY: lint
-lint:
-	@echo "+ $@"
-	@if [[ ! -z '$(shell $(GOLINT) ./... | grep -v vendor | tee /dev/stderr)' ]]; then exit 1; fi
-
 .PHONY: golangci-lint
-golangci-lint: devel/bin/golangci-lint
-	@echo "+ $@"
+golangci-lint: $(BINDIR)/golangci-lint-$(GOLANGCILINT_VERSION)/golangci-lint
 	$< run --modules-download-mode vendor
 
 .PHONY: verify-vendor
 verify-vendor:
-	@echo "+ $@"
-	@$(GO) mod verify > /dev/null
+	$(GO) mod verify > /dev/null
 
 .PHONY: build
-build: bin/$(NAME) bin/$(SS_ASM_NAME) bin/$(SS_AUTOTEST_NAME)
+build: $(BINDIR)/$(NAME) $(BINDIR)/$(SS_ASM_NAME) $(BINDIR)/$(SS_AUTOTEST_NAME)
 
-bin:
-	@mkdir -p bin
-
-bin/$(NAME): $(wildcard *.go) $(wildcard cmd/$(NAME)/*.go) $(wildcard cmd/$(SS_ASM_NAME)/*.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/*.go) $(wildcard autotest/*.go) | bin
+$(BINDIR)/$(NAME): $(wildcard *.go) $(wildcard cmd/$(NAME)/*.go) $(wildcard cmd/$(SS_ASM_NAME)/*.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/*.go) $(wildcard autotest/*.go) | $(BINDIR)
 	$(GO) build -mod=vendor -o $@ cmd/$(NAME)/*.go
 
-bin/$(SS_ASM_NAME): $(wildcard *.go) $(wildcard cmd/$(SS_ASM_NAME)/*.go) $(wildcard cmd/$(SS_ASM_NAME)/main/*.go) | bin
+$(BINDIR)/$(SS_ASM_NAME): $(wildcard *.go) $(wildcard cmd/$(SS_ASM_NAME)/*.go) $(wildcard cmd/$(SS_ASM_NAME)/main/*.go) | $(BINDIR)
 	$(GO) build -mod=vendor -o $@ cmd/$(SS_ASM_NAME)/main/*.go
 
-bin/$(SS_AUTOTEST_NAME): $(wildcard *.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/*.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/main/*.go) | bin
+$(BINDIR)/$(SS_AUTOTEST_NAME): $(wildcard *.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/*.go) $(wildcard cmd/$(SS_AUTOTEST_NAME)/main/*.go) | $(BINDIR)
 	$(GO) build -mod=vendor -o $@ cmd/$(SS_AUTOTEST_NAME)/main/*.go
 
 .PHONY: docker-build-env
@@ -72,9 +67,12 @@ docker-ci: docker-build-env
 
 .PHONY: install
 install:
-	sudo cp bin/$(NAME) /usr/bin/$(NAME)
+	sudo cp $(BINDIR)/$(NAME) /usr/bin/$(NAME)
 
-devel/bin/golangci-lint:
-	@mkdir -p devel/bin
-	curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b ./devel/bin v1.41.1
+$(BINDIR)/golangci-lint-$(GOLANGCILINT_VERSION)/golangci-lint:
+	@mkdir -p $(@D)
+	curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(@D)/ $(GOLANGCILINT_VERSION)
+
+$(BINDIR):
+	@mkdir -p $(BINDIR)
 
