clean up makefiles and include a shared common makefile

--- a/03-understanding-kernel-formats/Makefile
+++ b/03-understanding-kernel-formats/Makefile
@@ -1,5 +1,4 @@
-SHELL = /bin/bash
-RISCV_PREFIX ?= riscv32-unknown-elf-
+include ../common.mk
 
 .PHONY: all
 all: clean ret1234.bin ret1234.elf ret1234.dump
@@ -8,17 +7,17 @@ all: clean ret1234.bin ret1234.elf ret1234.dump
 clean:
 	rm -rf BUILD ret1234.elf ret1234.bin ret1234.dump
 
-BUILD/start.o: start.s
-	@mkdir -p BUILD
+BUILD/start.o: start.s | BUILD
 	$(RISCV_PREFIX)as -march=rv32i $< -o $@
 
 ret1234.elf: BUILD/start.o
-	@mkdir -p BUILD
 	$(RISCV_PREFIX)ld $^ -Tlinker.ld --architecture=rv32i -m elf32lriscv -o $@
 
 ret1234.bin: ret1234.elf
-	@mkdir -p BUILD
 	$(RISCV_PREFIX)objcopy $< -O binary $@
 
 ret1234.dump: ret1234.elf
 	$(RISCV_PREFIX)objdump -d $< > $@
+
+BUILD:
+	@mkdir -p $@
