working uart-functions test using seismo

--- a/06-uart-rxxd/Makefile
+++ b/06-uart-rxxd/Makefile
@@ -19,8 +19,8 @@ dump: BUILD/uart-rxxd.bin
 	$(RISCV_PREFIX)objdump -D -b binary -EL -m riscv:rv32 $<
 
 .PHONY: qemu
-qemu:
-	qemu-system-riscv64 -nographic -serial pty -gdb tcp::1234 -S -machine sifive_e -kernel BUILD/uart-rxxd.elf
+qemu: BUILD/uart-rxxd.elf
+	qemu-system-riscv32 -nographic -serial pty -gdb tcp::1234 -S -machine sifive_e -kernel $<
 
 BUILD:
 	@mkdir -p $@
