reworking initial chapters

--- a/01-writing-debugging-machine-code/Makefile
+++ b/01-writing-debugging-machine-code/Makefile
@@ -1,5 +1,12 @@
 include ../common.mk
 
-BUILD/bootloader1:
+BUILD/example: | BUILD
 	@mkdir -p BUILD
-	$(shell echo -n -e "\xb7\x02\x40\x20\x67\x80\x02\x00" > BUILD/bootloader1)
+	$(shell echo -n -e "\x37\x51\x34\x12" > $@)
+
+.PHONY: dump
+dump: BUILD/example
+	$(RISCV_PREFIX)objdump -D -b binary -EL -m riscv:rv32 $<
+
+BUILD:
+	@mkdir -p $@
